# Kitsune

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: catch2_tests.yml
cli/: CMakeLists.txt
cli/src/: logo.h  main.cpp
engine/: CMakeLists.txt
engine/include/KitsuneEngine/: console_colors.h  grabber.h  types.h
engine/include/KitsuneEngine/attacks/: attacks.h  pin_mask.h  rays.h
engine/include/KitsuneEngine/core/: bitboard.h  board.h  castle_mask.h  castle_rules.h  fen.h  move.h  move_gen.h  perft.h  square.h  zobrist_hash.h
engine/include/KitsuneEngine/core/attacks/: attacks.h  pin_mask.h  rays.h  rays_arrays.h
engine/src/: console_colors.cpp  grabber.cpp
engine/src/attacks/: attacks.cpp  bishop_attacks.cpp  king_attacks.cpp  knight_attacks.cpp  pawn_attacks.cpp  pin_mask.cpp  rays.cpp  rook_attacks.cpp
engine/src/attacks/attack_arrays/: bishop_attacks.h  bishop_attacks_pext.h  rook_attacks.h  rook_attacks_pext.h
engine/src/core/: bitboard.cpp  board.cpp  fen.cpp  move.cpp  move_gen.cpp  perft.cpp  zobrist_hash.cpp  zobrist_hash.h
engine/src/core/attacks/: attacks.cpp  bishop_attacks.cpp  bishop_attacks.h  king_attacks.cpp  king_attacks.h  knight_attacks.cpp  knight_attacks.h  pawn_attacks.cpp  pawn_attacks.h  pin_mask.cpp  rays.cpp  rays_arrays.h  rook_attacks.cpp  rook_attacks.h
engine/src/core/attacks/attack_arrays/: bishop_attacks.h  bishop_attacks_pext.h  rook_attacks.h  rook_attacks_pext.h
tests/: CMakeLists.txt  fen.cpp  frc.cpp  perft.cpp  standard.cpp
tests/src/: main.cpp
